# fuzzy-network-project

./: .gitignore  CMakeLists.txt  README.md  test
incl/: system_model.h  utils.h
pyscript/: fuzzy_logic_system.ipynb  workload_monitor.py
src/: main.cpp  system_model.cpp  utils.cpp
